infrastructure/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg

  addresses:
    - type: IPAddress
      value: 192.168.1.240

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.k8s.749rmw.com"
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.749rmw.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-k8s-749rmw-com-tls
      allowedRoutes:
        namespaces:
          from: All
